[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Materials/static_material.tres" type="Material" id=1]
[ext_resource path="res://Assets/VRInteraction/MySnapTray.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/VRInteraction/LeverSwitch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/DL/3D/NetworkModuleInspectorTable.gd" type="Script" id=4]
[ext_resource path="res://Assets/DL/3D/NetworkModuleActionSelector.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Stuff/QuickLabel.tscn" type="PackedScene" id=7]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.35, 1, 0.2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.175, 0.5, 0.1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.35, 0.05, 0.1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.175, 0.025, 0.05 )

[node name="NetworkModuleInspectorTable" type="StaticBody"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0.15 )
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0.15 )
shape = SubResource( 4 )

[node name="ModuleTray" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0730973, 1.009, 0 )

[node name="Snap_Zone" parent="ModuleTray" index="1"]
copies_on_pick_up = false

[node name="LeverSwitchLayout" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.2, 0, 0, 0, -8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 0.0501506, 1, 0 )

[node name="QuickLabel" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0501506, 1.006, -0.0792705 )
text = "Grid"

[node name="QuickLabel2" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0501506, 1.006, 0.0830049 )
text = "Row"

[node name="LeverSwitchActivationFV" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.2, 0, 0, 0, -8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 0.12615, 1, 0 )

[node name="QuickLabel3" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.12615, 1.006, 0.084 )
text = "Feat. map"

[node name="QuickLabel4" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.12615, 1.006, -0.079 )
text = "Feat. Vis."

[node name="NetworkModuleActionSelector" parent="." instance=ExtResource( 5 )]

[connection signal="has_dropped" from="ModuleTray/Snap_Zone" to="." method="_on_Snap_Zone_has_dropped"]
[connection signal="has_picked_up" from="ModuleTray/Snap_Zone" to="." method="_on_Snap_Zone_has_picked_up"]
[connection signal="hinge_moved" from="LeverSwitchLayout/LeverOrigin/InteractableLever" to="." method="_on_lever_switch_layout_status_change"]
[connection signal="hinge_moved" from="LeverSwitchActivationFV/LeverOrigin/InteractableLever" to="." method="_on_lever_switch_activation_fv_status_change"]

[editable path="ModuleTray"]
[editable path="ModuleTray/Snap_Zone"]
[editable path="LeverSwitchLayout"]
[editable path="QuickLabel"]
[editable path="QuickLabel2"]
[editable path="LeverSwitchActivationFV"]
[editable path="QuickLabel3"]
[editable path="QuickLabel4"]
